--- a/react-app/package.json
+++ b/react-app/package.json
@@ -18,5 +18,10 @@
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
-  }
+  },
+  "extends": [
+    "react-app",
+    "react-app/jest"
+  ]
+
 }
